fix dashboard overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -287,6 +287,7 @@ select, input[type="date"] {
 
 .main-container {
   padding: 0px;
+  overflow: hidden;
 }
 
 .container {
@@ -329,6 +330,7 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+
 h1 {
   font-size: 2.5rem;
   color: #159a8e;
@@ -353,7 +355,7 @@ h2 svg, h3 svg {
 }
 
 p {
-  color: #159a8e;
+  color: white;
   font-size: 1rem;
 }
 
@@ -445,4 +447,10 @@ p {
   top: 0;
   background: white;
   z-index: 10;
+}
+
+/* FOOTER */
+
+.footer h1, .footer-links p {
+  color: white;
 }
